# TianshanOS

./: .gitignore  CMakeLists.txt  README.md  README_EN.md  TianshanOS frontend modification.md  icon-picker.html  partitions.csv  partitions_ota.csv  sdkconfig  sdkconfig.defaults  test_agx.py  test_write.html
.cache/clangd/index/: ts_api_led.c.E80C50B973990C1C.idx  ts_https_server.c.242048B247C17F01.idx  ts_https_server.h.625D1EB33436F35D.idx  ts_i18n.c.BBFF6D0EB6331718.idx  ts_i18n.h.6DFAEF147380B684.idx  ts_storage.h.41C73D09C57C0E80.idx
.github/: TROUBLESHOOTING.md  copilot-instructions.md
.github/workflows/: build.yml
OTA_Server/: README.md  server.py
boards/rm01_esp32s3/: devices.json  pins.json
components/linenoise/: linenoise.c
components/ts_api/: CMakeLists.txt  Kconfig
components/ts_api/include/: ts_api.h
components/ts_api/src/: ts_api.c  ts_api_agx.c  ts_api_auth.c  ts_api_automation.c  ts_api_config.c  ts_api_config_pack.c  ts_api_device.c  ts_api_dhcp.c  ts_api_fan.c  ts_api_hosts.c  ts_api_key.c  ts_api_led.c  ts_api_log.c  ts_api_nat.c  ts_api_network.c  ts_api_ota.c  ts_api_power.c  ts_api_sftp.c  ts_api_ssh.c  ts_api_storage.c  ts_api_system.c  ts_api_temp.c  ts_api_ui.c  ts_api_wifi.c
components/ts_automation/: CMakeLists.txt
components/ts_automation/include/: ts_rule_engine.h  ts_variable.h
components/ts_automation/src/: ts_action_manager.c  ts_automation.c  ts_rule_engine.c  ts_source_manager.c  ts_variable.c
components/ts_cert/: CMakeLists.txt  Kconfig
components/ts_cert/include/: ts_cert.h
components/ts_config_pack/: CMakeLists.txt  Kconfig
components/ts_console/: CMakeLists.txt
components/ts_console/commands/: ts_cmd_agx.c  ts_cmd_auto.c  ts_cmd_config.c  ts_cmd_device.c  ts_cmd_dhcp.c  ts_cmd_fan.c  ts_cmd_fs.c  ts_cmd_gpio.c  ts_cmd_hosts.c  ts_cmd_key.c  ts_cmd_led.c  ts_cmd_nat.c  ts_cmd_net.c  ts_cmd_ota.c  ts_cmd_pki.c  ts_cmd_power.c  ts_cmd_register.c  ts_cmd_service.c  ts_cmd_sftp.c  ts_cmd_ssh.c  ts_cmd_storage.c  ts_cmd_system.c  ts_cmd_temp.c  ts_cmd_voltprot.c  ts_cmd_wifi.c
components/ts_console/include/: ts_cmd_all.h  ts_console.h  ts_i18n.h
components/ts_console/linenoise/: linenoise.c
components/ts_console/src/: ts_console.c  ts_console_builtin.c  ts_i18n.c  ts_script.c
components/ts_core/: CMakeLists.txt
components/ts_core/ts_config/: CMakeLists.txt
components/ts_core/ts_config/include/: ts_config.h  ts_config_file.h  ts_config_meta.h  ts_config_module.h  ts_config_schemas.h
components/ts_core/ts_config/src/: ts_config.c  ts_config_file.c  ts_config_json.c  ts_config_meta.c  ts_config_module.c  ts_config_nvs.c  ts_config_schemas.c
components/ts_drivers/: CMakeLists.txt
components/ts_drivers/include/: ts_device_ctrl.h  ts_fan.h  ts_power_monitor.h  ts_power_policy.h  ts_usb_mux.h
components/ts_drivers/src/: ts_agx_monitor.c  ts_device_ctrl.c  ts_drivers.c  ts_fan.c  ts_power.c  ts_power_monitor.c  ts_power_policy.c  ts_temp_source.c  ts_usb_mux.c
components/ts_hal/: CMakeLists.txt
components/ts_hal/include/: ts_pin_manager.h
components/ts_hal/src/: ts_adc.c  ts_gpio.c  ts_hal.c  ts_i2c.c  ts_pin_manager.c  ts_pwm.c  ts_spi.c  ts_uart.c
components/ts_led/: CMakeLists.txt
components/ts_led/include/: ts_led.h  ts_led_color_correction.h  ts_led_font.h  ts_led_image.h  ts_led_preset.h  ts_led_text.h
components/ts_led/src/: ts_led.c  ts_led_animation.c  ts_led_color.c  ts_led_color_correction.c  ts_led_driver.c  ts_led_effect.c  ts_led_effects.c  ts_led_font.c  ts_led_image.c  ts_led_layer.c  ts_led_preset.c  ts_led_private.h  ts_led_text.c
components/ts_mempool/: CMakeLists.txt
components/ts_net/: CMakeLists.txt  Kconfig
components/ts_net/include/: ts_dhcp_server.h  ts_http_server.h  ts_https_server.h  ts_nat.h  ts_net.h  ts_net_manager.h  ts_wifi.h
components/ts_net/src/: ts_dhcp_server.c  ts_eth.c  ts_http_server.c  ts_https_server.c  ts_nat.c  ts_net.c  ts_net_manager.c  ts_wifi.c
components/ts_ota/: CMakeLists.txt  Kconfig
components/ts_ota/include/: ts_ota.h
components/ts_ota/src/: ts_ota.c  ts_ota_https.c  ts_ota_rollback.c  ts_ota_sdcard.c  ts_ota_version.c  ts_ota_www.c
components/ts_security/: CMakeLists.txt
components/ts_security/include/: ts_crypto.h  ts_keystore.h  ts_known_hosts.h  ts_security.h  ts_ssh_client.h  ts_ssh_commands_config.h  ts_ssh_hosts_config.h  ts_ssh_log_watch.h
components/ts_security/src/: ts_auth.c  ts_crypto.c  ts_keystore.c  ts_known_hosts.c  ts_port_forward.c  ts_scp.c  ts_security.c  ts_sftp.c  ts_ssh_client.c  ts_ssh_commands_config.c  ts_ssh_hosts_config.c  ts_ssh_log_watch.c  ts_ssh_shell.c
components/ts_storage/: CMakeLists.txt  Kconfig
components/ts_webui/: CMakeLists.txt
components/ts_webui/src/: ts_webui_api.c  ts_webui_ws.c  ts_ws_subscriptions.c
components/ts_webui/web/: index.html
components/ts_webui/web/css/: style.css
components/ts_webui/web/fonts/: remixicon.css
components/ts_webui/web/images/: README.md  favicon.icns
components/ts_webui/web/js/: api.js  app.js  dragSort.js  i18n.js  router.js  terminal.js
components/ts_webui/web/js/lang/: de-DE.js  en-US.js  es-ES.js  fr-FR.js  ja-JP.js  ko-KR.js  uk-UA.js  zh-CN.js
docs/: API_DESIGN.md  API_REFERENCE.md  ARCHITECTURE_DESIGN.md  AUTOMATION_ENGINE.md  COMMANDS.md  CONFIGURATION_GUIDE.md  CONFIG_PACK_DESIGN.md  CONFIG_SYSTEM_DESIGN.md  DEVELOPMENT_PROGRESS.md  DOCUMENTATION_RESTRUCTURE.md  DRAM_FRAGMENTATION_SOLUTION.md  DRAM_OPTIMIZATION_PLAN.md  GPIO_MAPPING.md  I18N_REMAINING_CHECK.md  LED_ARCHITECTURE.md  MEMORY_OPTIMIZATION.md  MEMORY_STATUS.md  PKI_DESIGN.md  QUICK_START.md  README.md  SECURITY_ENHANCEMENT_PROPOSAL.md  SECURITY_IMPLEMENTATION.md  TROUBLESHOOTING.md  VERSION_MANAGEMENT.md  WEBUI_CLEANUP_PROPOSAL.md
help/: security-guide.en.mdx  security-guide.mdx
main/: CMakeLists.txt  main.c  ts_core_init.c  ts_services.c  ts_services.h
scripts/: bump_version.sh
sdcard/fonts/: boutique9x9.fnt  cjk.fnt  pixel9x9.fnt
tools/: ttf2fnt.py  version.py
tools/pki-server/: .env.example  .gitignore  README.md  requirements.txt  run.py
(+26 files in other folders)
