idf_component_register(
    SRCS
        "src/ts_drivers.c"
        "src/ts_fan.c"
        "src/ts_power.c"
        "src/ts_device_ctrl.c"
        "src/ts_usb_mux.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        ts_core
        ts_hal
    PRIV_REQUIRES
        driver
        esp_adc
        esp_timer
)
