idf_component_register(
    SRCS
        "src/ts_net.c"
        "src/ts_eth.c"
        "src/ts_wifi.c"
        "src/ts_dhcp_server.c"
        "src/ts_http_server.c"
        "src/ts_https_server.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        ts_core
        ts_hal
        ts_storage
        esp_netif
        esp_eth
        esp_wifi
        esp_http_server
        esp_https_server
        lwip
        mbedtls
    PRIV_REQUIRES
        driver
        esp_event
        nvs_flash
)
